fix: :bug: force  2rem status icon on mobile

--- a/Views/User/History.cshtml.css
+++ b/Views/User/History.cshtml.css
@@ -327,7 +327,8 @@
     }
 
     .status-symbol {
-        max-height: 30px;
+        height: 2rem;
+        width: 2rem;
         margin: 0;
     }
 
